# bitmanipulation

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  StaticAnalysis.cmake
src/: CMakeLists.txt
src/include/: bitmanipulation.hpp
test/: CMakeLists.txt
